--- a/src/backpack_bringup/package.xml
+++ b/src/backpack_bringup/package.xml
@@ -9,6 +9,7 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <exec_depend>bno055</exec_depend>
   <exec_depend>ldlidar_stl_ros2</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
