Added tf2_ros as an exec dependency

--- a/src/backpack_bringup/package.xml
+++ b/src/backpack_bringup/package.xml
@@ -11,6 +11,7 @@
 
   <exec_depend>bno055</exec_depend>
   <exec_depend>ldlidar_stl_ros2</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
