--- a/src/backpack_bringup/CMakeLists.txt
+++ b/src/backpack_bringup/CMakeLists.txt
@@ -9,7 +9,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
-# find_package(<dependency> REQUIRED)
+#find_package(tf2_ros REQUIRED)
 
 install(DIRECTORY
   launch
