--- a/src/backpack_bringup/package.xml
+++ b/src/backpack_bringup/package.xml
@@ -12,6 +12,7 @@
   <exec_depend>bno055</exec_depend>
   <exec_depend>foxglove_bridge</exec_depend>
   <exec_depend>ldlidar_stl_ros2</exec_depend>
+  <exec_depend>imu_tf</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
