Feature/foxglove bridge take two (#11)
* Added foxglove_bridge
* Tricking rosdep into thinking we're running Debian Bulleye

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "src/imu_tf"]
 	path = src/imu_tf
 	url = https://github.com/HealthDataInsight/imu_tools_ros2
+[submodule "src/ros-foxglove-bridge"]
+	path = src/ros-foxglove-bridge
+	url = https://github.com/foxglove/ros-foxglove-bridge.git
