Added GPS fixes (#14)
* Added nmea_navsat_driver
* Added nmea_msgs
* Added tf_transformations
* Corrected the baud rate
* Updated Makefile
* Added GPS to launch file

--- a/src/backpack_bringup/config/params.yaml
+++ b/src/backpack_bringup/config/params.yaml
@@ -53,3 +53,10 @@ bno055_imu_driver:
     # variance_angular_vel: [0.0, 0.0, 0.0] # [rad/s]
     # variance_orientation: [0.0, 0.0, 0.0] # [rad]
     # variance_mag: [0.0, 0.0, 0.0] # [Tesla]
+nmea_navsat_driver:
+  ros__parameters:
+    port: "/dev/ttyAMA4"
+    baud: 38400
+    frame_id: "gps"
+    time_ref_source: "gps"
+    useRMC: False
