--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,14 @@
 [submodule "src/ros-foxglove-bridge"]
 	path = src/ros-foxglove-bridge
 	url = https://github.com/foxglove/ros-foxglove-bridge.git
+[submodule "src/nmea_navsat_driver"]
+	path = src/nmea_navsat_driver
+	url = https://github.com/ros-drivers/nmea_navsat_driver.git
+	branch = ros2
+[submodule "src/nmea_msgs"]
+	path = src/nmea_msgs
+	url = https://github.com/ros-drivers/nmea_msgs.git
+	branch = ros2
+[submodule "src/tf_transformations"]
+	path = src/tf_transformations
+	url = https://github.com/DLu/tf_transformations.git
