--- a/src/backpack_bringup/package.xml
+++ b/src/backpack_bringup/package.xml
@@ -7,18 +7,20 @@
   <maintainer email="52189+timgentry@users.noreply.github.com">ubuntu</maintainer>
   <license>TODO: License declaration</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <depend>rclpy</depend>
 
-  <exec_depend>bno055</exec_depend>
-  <exec_depend>foxglove_bridge</exec_depend>
-  <exec_depend>ldlidar_stl_ros2</exec_depend>
-  <exec_depend>imu_tf</exec_depend>
-  <exec_depend>tf2_ros</exec_depend>
+  <depend>bno055</depend>
+  <depend>foxglove_bridge</depend>
+  <depend>ldlidar_stl_ros2</depend>
+  <depend>imu_tf</depend>
+  <depend>tf2_ros</depend>
 
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
+  <test_depend>python3-pytest</test_depend>
 
   <export>
-    <build_type>ament_cmake</build_type>
+    <build_type>ament_python</build_type>
   </export>
 </package>
